Generate mutations graphs

--- a/4. dl_model_run.ipynb
+++ b/4. dl_model_run.ipynb
@@ -352,7 +352,7 @@
     "    def forward(self, x):\n",
     "        positions = x[\"position\"]\n",
     "        x = x[\"embeddings\"] + self.seq_pos_embed(torch.arange(x[\"position\"].size(1), device=device)) + self.pept_pos_embed(x[\"position\"])\n",
-    "        x = x.permute(1, 0, 2)  # Permute to [sequence_length, batch_size, features]\n",
+    "        x = x.permute(1, 0, 2)\n",
     "\n",
     "        embed = self.fc_embed(x)\n",
     "        transformer_output = self.transformer_encoder(embed)\n",
