--- a/1. data_preparation.ipynb
+++ b/1. data_preparation.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Protein conformational changes between conditions\n"
+    "# Data Preparation\n",
+    "This jupyter notebook aims to prepare the data with the binary positions of the peptide in the proteins sequence."
    ]
   },
   {
@@ -37,6 +38,7 @@
    },
    "outputs": [],
    "source": [
+    "# Selecting specific columns from the dataset to simplify analysis\n",
     "df = df[['Uniprot_ID', 'Peptide_sequence', 'Log2FC(LiP_norm)', 'Qvalue(LiP)']]"
    ]
   },
@@ -167,6 +169,7 @@
    },
    "outputs": [],
    "source": [
+    "# Map full protein sequences to each UniProt ID in the df\n",
     "df[\"full_sequence\"] = df['Uniprot_ID'].map(sequences)"
    ]
   },
@@ -192,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -210,6 +213,10 @@
    ],
    "source": [
     "def binary_position(row):\n",
+    "    \"\"\"\n",
+    "    Generate a binary position list for a peptide sequence within its full sequence.\n",
+    "    \"\"\"\n",
+    "    \n",
     "    full_len = len(row['full_sequence'])\n",
     "    short_len = len(row['Peptide_sequence'])\n",
     "    start_index = row['full_sequence'].find(row['Peptide_sequence'])\n",
@@ -226,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -246,12 +253,13 @@
     "max_length = 1000\n",
     "\n",
     "# Padding binary position to length of 1000\n",
+    "# The padding is one to have same size tensors\n",
     "trimmed_df['Padded_Binary_Positions'] = trimmed_df['Binary_Positions'].apply(lambda x: np.pad(x, (0, max_length - len(x)), 'constant'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +377,7 @@
        "331  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
